<resources>


    <string name="app_name">Whiteboard</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="title_activity_host_white_board">HostWhiteBoardActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="version_number">0.0.0</string>
    <string name="release_date">January 28, 2016</string>
    <string name="authors">By: UMD CS 4995</string>

    <string name="title_activity_master_whiteboard_add">MasterWhiteboardAddActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_contact_list">ContactListActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dialog_delete_whiteboard">Are you sure you wish to delete this whiteboard?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="dialog_new_whiteboard_title">Create New Whiteboard</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>

    <string name="title_activity_drawing">Drawing</string>
    <string name="picture">Picture</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="title_activity_connection">ConnectionActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="Login">Login</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in</string>
    <string name="fatal_error_title">Fatal Error</string>
    <string name="fatal_error">Fatal Error</string>
    <string name="parse_error_title">Parse Error</string>
    <string name="parse_error_message">There was an error in parsing</string>
    <string name="no_connection_title">No Connection</string>
    <string name="no_connection">The application failed to make a connection</string>
    <string name="error">Error</string>
    <string name="login_error">There was an error in logging in</string>
    <string name="forbidden_error">No access</string>
    <string name="not_found_error">Data not found</string>
    <string name="invalid_revision_error_title">Invalid revision</string>
    <string name="invalid_revision_error">There has been an invalid revision</string>
    <string name="validation_error_title">Validation Error</string>
    <string name="validation_error_body">There has been an error in validating your credentials</string>

    <!-- Button labels -->
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <!---The client ID provided with OAuth credentials-->
    <string name="server_client_id">635513881022-50i1nvlsk143gct1kae3m2lbmj7lb20s.apps.googleusercontent.com</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>


    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="back">back</string>

    <!-- TODO: determine how to best have a 'secure' switch -->
    <bool name="secure">false</bool>
    <string name="hostname">131.212.218.164</string>
    <string name="port">3000</string>
    <string name="secure_port">4995</string>
    <string name="rtc_port">3001</string>
    <string name="try_again"/>
    <string name="error_confirm"/>
    <string name="signed_in_fmt">Signed in as </string>
</resources>
